[package]
name = "synaplan-qdrant-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

# Qdrant client (use latest)
qdrant-client = "1.12"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

[profile.release]
opt-level = 3          # Maximum optimization
lto = "fat"            # Full Link-Time Optimization for best performance
codegen-units = 1      # Single codegen unit for maximum optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Abort on panic (smaller, faster)

[profile.dev]
opt-level = 0          # No optimization in dev for fast compilation

[profile.test]
opt-level = 2          # Some optimization for tests

