[package]
name = "synaplan-qdrant-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }

# Qdrant client (use latest)
qdrant-client = "1.12"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait for embedding interface
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP client for Discord webhooks
reqwest = { version = "0.12", features = ["json"] }

# Time utilities for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Native embeddings (optional)
ort = { version = "2.0.0-rc.11", optional = true, features = ["load-dynamic"] }
tokenizers = { version = "0.21", optional = true }

# TLS support (optional, enabled via feature flag)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[features]
default = []
tls = ["axum-server", "rustls", "rustls-pemfile"]
native_onnx = ["ort", "tokenizers"]

[profile.release]
opt-level = 3          # Maximum optimization
lto = "fat"            # Full Link-Time Optimization for best performance
codegen-units = 1      # Single codegen unit for maximum optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Abort on panic (smaller, faster)

[profile.dev]
opt-level = 0          # No optimization in dev for fast compilation

[profile.test]
opt-level = 2          # Some optimization for tests

